--- a/question3.html
+++ b/question3.html
@@ -8,7 +8,7 @@
         color:#D5EEBB;
       }
       article>ol>li{
-              background-color: yellow;
+              background-color: light gray;
           }
     </style>
   </head>
