--- a/cssquestion1.html
+++ b/cssquestion1.html
@@ -18,6 +18,7 @@ div {
       <h3>Name-HEMAVARDHINI</h3>
       <h3>Roll.No:-2006074</h3>
       <h3>Branch: CSE A-2</h3>
+  </nav>
 <h4>Demonstrating the Box Model</h4>
 
 <p>The CSS box model is essentially a box that wraps around every HTML element. It consists of: borders, padding, margins, and the actual content.</p>
