--- a/cssquestion1.html
+++ b/cssquestion1.html
@@ -5,7 +5,7 @@
 div {
   background-color: lightgrey;
   width: 300px;
-  border: 15px red;
+  border: 15px solid green;
   padding: 50px;
   margin: 20px;
 }
@@ -14,7 +14,7 @@ div {
 <body>
 
   <h2><center><font face="Algerian"size="10"color="orange">CSL3403_ASSIGNMENT-4</center></font></h2>
-<nav style="display: flex; justify-content: space-around; background-color: gray(70, 50, 50); color: rose;">
+<nav style="display: flex; justify-content: space-around; background-color: rgb(70, 50, 50); color: rose;">
       <h3>Name-HEMAVARDHINI</h3>
       <h3>Roll.No:-2006074</h3>
       <h3>Branch: CSE A-2</h3>
@@ -23,7 +23,7 @@ div {
 
 <p>The CSS box model is essentially a box that wraps around every HTML element. It consists of: borders, padding, margins, and the actual content.</p>
 
-<div>This text is the content of the box. We have added a 50px padding, 20px margin and a 15px red border.</div>
+<div>This text is the content of the box. We have added a 50px padding, 20px margin and a 15px green border.</div>
 
 </body>
 </html>
