--- a/cssquestion1.html
+++ b/cssquestion1.html
@@ -14,7 +14,7 @@ div {
 <body>
 
   <h2><center><font face="Algerian"size="10"color="orange">CSL3403_ASSIGNMENT-4</center></font></h2>
-<nav style="display: flex; justify-content: space-around; background-color: gray(70, 50, 50); color: rose;">
+<nav style="display: flex; justify-content: space-around; background-color: rgb(70, 50, 50); color: white;">
       <h3>Name-HEMAVARDHINI</h3>
       <h3>Roll.No:-2006074</h3>
       <h3>Branch: CSE A-2</h3>
