--- a/cssquestion2.html
+++ b/cssquestion2.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<title>
-		FLEX
-	</title>
-	<style type="text/css">
-	.container {
+  <meta charset="utf-8">
+  <title>
+    FLEX
+  </title>
+  <style type="text/css">
+  .container {
      display: flex;
      flex-wrap: wrap;
      padding: 5px;
@@ -16,10 +16,16 @@
      .item {
      margin: 5px;
      }
-	</style>
+  </style>
 </head>
 <body>
-	<body>
+  <h2><center><font face="Algerian"size="10"color="orange">CSL3403_ASSIGNMENT-4</center></font></h2>
+<nav style="display: flex; justify-content: space-around; background-color: rgb(70, 50, 50); color: white;">
+      <h3>Name-HEMAVARDHINI</h3>
+      <h3>Roll.No:-2006074</h3>
+      <h3>Branch: CSE A-2</h3>
+  </nav>
+  <body>
    <div class="container">
       <img class="item" src="https://source.unsplash.com/random/320x240" alt="Example image">
       <img class="item" src="https://source.unsplash.com/random/320x240" alt="Example image">
