--- a/Task-2.html
+++ b/Task-2.html
@@ -7,11 +7,11 @@
 	</title>
 </head>
 <frameset cols="30%,40%,30%">
-	<frame name="f1" src="Frame-2.1.html"></frame>
-	<frameset rows="50%,50%" border="30px" bordercolor="blue">
-	<frame name="f2" src="Frame-2.2.html"></frame>
-	<frame name="f3" src="Frame-2.3.html"></frame>
+	<frame name="f1" src="Frame-2.a.html"></frame>
+	<frameset rows="50%,50%" border="30px" bordercolor="red">
+	<frame name="f2" src="Frame-2.b.html"></frame>
+	<frame name="f3" src="Frame-2.c.html"></frame>
 </frameset>
-<frame name="f4" src="Frame-2.4.html"></frame>
+<frame name="f4" src="Frame-2.d.html"></frame>
 </frameset>
-</html
+</html>
