--- a/hemajs3.html
+++ b/hemajs3.html
@@ -11,7 +11,7 @@
         <nav style="display: flex; justify-content: space-around; background-color: rgb(78, 70, 70); color: white;">
       <h1>JS LAB ASSIGNMENT</h1>
     </nav>
-        <nav style="display: flex; justify-content: space-around;">
+        <nav style="display: flex; justify-content: space-around; background-color:lightpink ; color: darkblue;">
             <h2>NAME : YALLAMPATI HEMAVARDHINI</h2>
             <h2>ROLL NO : 2006074</h2>
             <h2>BRANCH : CSE A2</h2>
